test/conformance/chainsaw/mutating-policies/context/image/invalid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-pod
  namespace: isolated-ns
spec:
  containers:
    - name: invalid
      image: test-image
