test/conformance/chainsaw/mutating-policies/context/image/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-dockerhub
  namespace: isolated-ns
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx:latest
