test/conformance/chainsaw/mutating-policies/context/image/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-dockerhub
  namespace: isolated-ns
  labels:
    source: docker.io
spec:
  containers:
    - name: nginx
      image: nginx:latest
