test/conformance/chainsaw/mutating-policies/context/image/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-image-lib
spec:
  steps:
    - name: create namespace
      try:
        - apply:
            file: ns.yaml
    - name: apply policy and verify existence
      try:
        - apply:
            file: policy.yaml
        - assert:
            file: policy-assert.yaml
    - name: create pods 
      try:
        - apply:
            file: pod.yaml
    - name: sleep
      try:
        - sleep:
            duration: 5s
    - name: verify mutated pods
      try:
        - assert:
            file: pod-assert.yaml
    - name: invalid-pod-verification
      try:
        - apply: 
            file: invalid-pod.yaml
        - assert:
            file: invalid-pod.yaml
